--- a/estilos.css
+++ b/estilos.css
@@ -1,9 +1,8 @@
 body{
-    background-color: tomato;
+    background-color: aquamarine;
 }
-
 h1{
-    background-color: black;
+    background-color: red;
     text-align: center;
     text-transform: capitalize;
 }
