--- a/estilos.css
+++ b/estilos.css
@@ -1,3 +1,6 @@
+*{
+    box-sizing: border-box;
+}
 body{
     background-color: rgb(125, 124, 124);
 }
@@ -5,4 +8,8 @@ h1{
     background-color: turquoise;
     text-align: center;
     text-transform: capitalize;
+    text-decoration: antiquewhite;
+}
+img{
+    border: 10px salmon;
 }
